k8s/server.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server-deployment
  template:
    metadata:
      labels:
        app: server-deployment
    spec:
      containers:
        - name: server-deployment
          #TODO: add tag??
          image: ghcr.io/jgchen716/graph-visualizer/server
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: server-service
spec:
  selector:
    app: server-service
  ports:
    - port: 3001
