k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    traefik.ingress.kubernetes.io/rule-type: PathPrefixStrip
spec:
  rules:
    - host: "jgchen.cis188.org"
      http:
        paths:
          - path: "/api"
            pathType: Prefix
            backend:
              service:
                name: server-service
                port:
                  number: 3001

          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 3000

  tls:
    - hosts:
        - "jgchen.cis188.org"
      secretName: jgchen-cis188-org-tls
